generator client {
  provider = "prisma-client-js"
}

// generates the standardized DBML - Database Markup Language for our database
// https://github.com/notiz-dev/prisma-dbml-generator
generator dbml {
  provider = "prisma-dbml-generator"
}

// generates entity relationship diagram
// https://github.com/keonik/prisma-erd-generator
generator erd {
  provider = "prisma-erd-generator"
}

// // generates json schema that can be used for validation
// // https://github.com/valentinpalkovic/prisma-json-schema-generator
generator jsonSchema {
  provider = "prisma-json-schema-generator"
}

//

// mysql://root:admin@localhost:3306/testdb

// must use MySQL for ENUMS
datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

// datasource db {
//   provider = "sqlite"
//   url      = "file:./dev.db"
// }

model User {
  id             Int            @id @default(autoincrement())
  createdAt      DateTime       @default(now())
  email          String         @unique
  password       String
  unsafePassword String
  firstName      String?
  lastName       String?
  role           Role           @default(USER)
  serializables  Serializable[]
  transactions   Transaction[]
}

model Consumable {
  id           String        @id @default(cuid())
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  name         String
  count        Int
  type         ItemType      @default(CONSUMABLE)
  description  String?
  guide        String?
  photo        String?
  transactions Transaction[]
}

model Serializable {
  id            String        @id @default(cuid())
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt
  name          String
  serial_number String
  brand         String?
  status        ItemStatus
  type          ItemType      @default(DEVICE)
  project       String?
  description   String?
  guide         String?
  photo         String?
  renter        User?         @relation(fields: [userId], references: [id])
  userId        Int?
  transactions  Transaction[]
  version       Int           @default(0)
}

model Transaction {
  id             String           @id @default(cuid())
  createdAt      DateTime         @default(now())
  consumable     Consumable?      @relation(fields: [consumableId], references: [id])
  consumableId   String?
  serializable   Serializable?    @relation(fields: [serializableId], references: [id])
  serializableId String?
  user           User?            @relation(fields: [userId], references: [id])
  userId         Int?
  type           TransactionType?
}

enum TransactionType {
  CHECKOUT
  RETURN
  CONSUME
  CREATE
  DELETE
  EDIT
}

enum Role {
  USER
  ADMIN
}

enum ItemType {
  TOOL
  DEVICE
  CONSUMABLE
}

enum ItemStatus {
  BROKEN
  USABLE
  SCRAP
  IN_REPAIR
}
